k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-k8s-app
  namespace: cicd-k8s
spec:
  selector:
    app: cicd-k8s-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
