k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-k8s-app
  namespace: cicd-k8s
spec:
  ingressClassName: nginx
  rules:
  - host: cicd-k8s.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cicd-k8s-app
            port:
              number: 80
